# GitDR

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: SPEC.md
gitdr/: __init__.py  config.py  main.py
gitdr/api/: __init__.py  deps.py  pages.py  schemas.py
gitdr/api/routers/: destinations.py  jobs.py  runs.py  sources.py  system.py
gitdr/database/: __init__.py  connection.py  encryption.py  models.py
gitdr/services/: __init__.py  backup.py  discovery.py  git_ops.py  restore.py  retention.py  scheduler.py
gitdr/services/storage/: __init__.py  base.py  local.py  s3.py
gitdr/templates/: 404.html  _repo_picker.html  _restore_history.html  base.html  dashboard.html  destinations.html  job_detail.html  jobs.html  run_detail.html  runs.html  settings.html  source_detail.html  sources.html
tests/: conftest.py
tests/integration/: conftest.py  test_api_destinations.py  test_api_jobs.py  test_api_runs.py  test_api_sources.py  test_api_system.py  test_backup_flow.py  test_pages.py  test_restore.py
tests/unit/: test_config.py  test_connection.py  test_discovery.py  test_encryption.py  test_git_ops.py  test_main.py  test_models.py  test_retention.py  test_storage_local.py  test_storage_s3.py
