[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitdr"
version = "0.1.0"
description = "Self-hosted Git repository backup and restore tool"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "sqlmodel==0.0.38",
    "cryptography==46.0.6",
    # APScheduler v4 is pre-release (4.0.0a6). Pin this exact version.
    # Do not upgrade without running the full test suite.
    "apscheduler==4.0.0a6",
    "anyio==4.13.0",
    "boto3==1.42.83",
    "azure-storage-blob==12.28.0",
    "google-cloud-storage==3.10.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.7",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
# sqlcipher extra: requires libsqlcipher-dev on the system before installing.
#   macOS:          make setup-sqlcipher-macos
#   Debian/Ubuntu:  apt-get install libsqlcipher-dev gcc
# Unit tests run without this extra (they use plain SQLite in-memory).
# Integration tests and production require it.
sqlcipher = [
    "sqlcipher3",
]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov",
    "httpx==0.28.1",
    "ruff",
    "mypy",
]

[project.scripts]
gitdr = "gitdr.main:run"

[tool.hatch.build.targets.wheel]
packages = ["gitdr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    # SQLModel uses deprecated pydantic internals in 0.0.38; ignore until upstream fixes
    "ignore::DeprecationWarning:sqlmodel",
    "ignore::DeprecationWarning:pydantic",
]

[tool.coverage.run]
source = ["gitdr"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4"]
ignore = [
    "B008", # allow Depends() in function argument defaults (FastAPI pattern)
    "S101",  # allow assert in test files
    "S105",  # allow hardcoded passwords in test fixtures
    "S106",  # allow hardcoded passwords in test fixtures
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
